Accepting empty string as valid copy reference command

When storing a new configuration setting for the 'copy reference' command,
accept an empty string (equivalent to 'No command' in the UI) as a valid
configuration string.

BUG: 467803