src/config/preferences.cpp
@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2004-2020 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
+ *   Copyright (C) 2004-2023 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -150,7 +150,7 @@ public:
     }
 
     inline bool validateValueForCopyReferenceCommand(const QString &valueToBeChecked) {
-        return Preferences::availableCopyReferenceCommands.contains(valueToBeChecked);
+        return valueToBeChecked.isEmpty() || Preferences::availableCopyReferenceCommands.contains(valueToBeChecked);
     }
 
     inline bool validateValueForPageSize(const QPageSize::PageSizeId valueToBeChecked) {
